# Raksha-Hub

./: CMakeLists.txt  README.txt  installer.iss
src/: app.rc  library_manager.cpp  library_manager.h  main.cpp  mpv_object.cpp  mpv_object.h  mpv_player.cpp  mpv_player.h  mpv_renderer.cpp  mpv_renderer.h  thumbnail_generator.cpp  thumbnail_generator.h
src/qml/: AddButton.qml  AddMenu.qml  Main.qml  MenuButton.qml  PlayerWindow.qml  ShowCard.qml  ShowPage.qml  SideMenuItem.qml  Toast.qml
